[14/5] add apis